# df2301q.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/esp32/i2c/src/: main.rs
examples/esp32/uart/: Cargo.toml
examples/esp32/uart/src/: main.rs
src/: error.rs  lib.rs
src/drivers/: mod.rs  types.rs
src/drivers/i2c/: driver.rs  mod.rs  types.rs
src/drivers/uart/: driver.rs  types.rs
tests/: i2c.rs  uart.rs
tests/i2c/: driver.rs
tests/uart/: driver.rs  types.rs
tests/uart/types/: command.rs  get_version.rs  notify_status.rs  play_voice.rs  set_config.rs
